# rover_client

./: changelog.md  g.sh  mmwave.md  pyproject.toml
src/: .env  bme280_i2c.py  mmwave_presence.py
src/app/: main.py  shared.py
src/app/hardware/: env_sensors.py  hub_control.py  mmwave.py
src/app/models/: config.py  database.py  hub_models.py  remote_control.html  state_models.py
src/app/routers/: movement.py  state.py  web_socket.py
src/app/static/: index.html
src/app/static/css/: style.css
src/app/static/js/: main.js
src/temp/: mmwave.py
